😎 Fixed the form overflow on products

--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,7 @@
 
 .Menu button:hover {
     border: none;
+    background: none;
 }
 
 .Menu button + button::before,
